Fix for Internet Explorer
Div of Search Results was displayed too much to the right.
Also moved padding-code for Searchbar from _sm to _md, because this code
only gets active there. Still more to do to prevent overflow into logo.

--- a/resources/stylesheets/component/desktop_md/navbar.search.less
+++ b/resources/stylesheets/component/desktop_md/navbar.search.less
@@ -1,4 +1,5 @@
 header.main-header .calumma-desktop-visible.navbar .p-search form {
+	padding-left: calc(~"( 50vw - 790px )");
 	.form-group{
 		input.form-control{
 			width: calc(~"100vw - 740px")  !important;
