--- a/resources/stylesheets/component/desktop_sm/navbar.search.less
+++ b/resources/stylesheets/component/desktop_sm/navbar.search.less
@@ -2,12 +2,10 @@ header.main-header .calumma-desktop-visible.navbar .p-search form {
 	border: none;
 	position: absolute;
 	padding: 0px;
-	padding-left: calc(~"( 50vw - 790px )");
 	left: 300px;
 	top: @menu-top-items-margin;
 	.form-group{
 		width: 100%;
-		display: inline-flex;
 		input.form-control{
 			width: calc(~"100vw - 650px")  !important;
 			max-width: 836px - 200px;
